добавил кодировку и чищу от мусора

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:postgresql://localhost:5432/postgres
+db.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=UTF-8
 db.username=postgres
 db.password=admin
 db.driver=org.postgresql.Driver
